Fix extra scrollbar on DD.

--- a/app/assets/src/components/views/projects/projects_view.scss
+++ b/app/assets/src/components/views/projects/projects_view.scss
@@ -15,6 +15,12 @@
     margin-bottom: 10px;
   }
 
+  .table {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+  }
+
   .map {
     flex: 1 0 auto;
     display: flex;
